added swagger-autogen request body example
